# floodgate

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
floodgate/: __init__.py  floodgate.pyi
src/: dynamic_mapping.rs  fixed_mapping.rs  jumping_window.rs  lib.rs  traits.rs
