[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "floodgate-rs"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
sdist-include = ["floodgate"]

[tool.cibuildwheel]
build-verbosity = "1"

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
before-build = "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y"

[tool.cibuildwheel.macos]
archs = ["auto", "arm64"]

[tool.cibuildwheel.windows]
archs = ["auto", "arm64"]
