[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "floodgate-rs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
sdist-include = ["floodgate"]

[tool.cibuildwheel]
build-verbosity = "1"

[tool.cibuildwheel.linux]
# archs = ["auto", "aarch64"]
archs = ["aarch64"]
before-build = "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y"
environment = 'PATH="$HOME/.cargo/bin:$PATH"'

[tool.cibuildwheel.macos]
archs = ["auto", "arm64"]
before-build = "rustup target add aarch64-apple-darwin"
