[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "floodgate-rs"
version = "0.1.3"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "Python bindings for, a ratelimiting library written in Rust."
readme = "README.md"
keywords = ["cooldown", "ratelimit", "rate limit", "rust", "pyo3"]
license = { text = "MIT" }

[tool.maturin]
sdist-include = ["floodgate"]

[tool.cibuildwheel]
build-verbosity = "1"
skip = ["*-musllinux_i686"]

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
before-build = "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain nightly -y"
environment = 'CARGO_UNSTABLE_SPARSE_REGISTRY=true PATH="$HOME/.cargo/bin:$PATH"'

[tool.cibuildwheel.macos]
archs = ["auto", "arm64"]
before-build = "rustup target add aarch64-apple-darwin"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
python_version = 3.8
